[package]
name = "qname"
version = "0.1.0"
edition = "2021"

[lib]
name = "qname"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.27", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
egui_extras = { version = "0.27", features = ["default", "all_loaders"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = { version = "0.25", features = ["jpeg", "png"] }
