[package]
name = "qname"
version = "0.1.0"
edition = "2021"

[lib]
name = "qname"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.27", features = ["default"] }
egui_extras = { version = "0.27", features = ["all_loaders"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = { version = "0.25", features = ["default-formats"] }
nom = "7.1.3"
rand = "0.8.5"
