[package]
name = "qname"
version = "0.2.0"
edition = "2021"

[lib]
name = "qname"
path = "src/lib.rs"

# referenced https://github.com/johnthagen/min-sized-rust
# for some final binary size optimizations
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eframe = { version = "0.27", features = ["default"] }
egui_extras = { version = "0.27.2", features = ["image"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
# Must match the version of image that egui/eframe and egui/egui_extras is using.
# I used their github releases to figure it out.
image = { version = "0.24", features = ["default"] }
nom = "7.1.3"
open = "5.1.3"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
